--- a/aulaDia21-11-24/index.html
+++ b/aulaDia21-11-24/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <form >
+        <h1>Cadastro de novos clientes</h1>
+        <label>Usuário</label>
+        <input type="text" id="txtUser">
+        <label>Senha</label>
+        <input type="password" id="txtPwd">
+        <input type="button" value="Cadastrar">
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
